# hawaii

./: #other_scraping_stuff.py#  #testScraper.py#  .#testScraper.py  .gitignore  README.md  input_scraper.py  input_scraper.py~  statutesInCSV.csv  testScraper.py  testScraper.py~  trawler.py
catala-regs/: .gitignore  286-136.catala_en  291-10.catala_en  291-11-6.catala  291-11-6.catala_en  291-11.5.catala_en  291-11.6.catala_en  291-11.catala  291-12.catala  291-13.catala  291-14.catala  291-2.catala  291-3-1.catala_en  291-3-3.catala  291-3.2.catala_en  291-4-6.catala  291-8.catala  291-9.catala  43.43.7541.catala_en  46.09.470.catala_en  46.09.480.catala_en  46.10.490.catala_en  46.10.495.catala_en  46.10.505.catala_en  46.12.550.catala_en  46.12.560.catala_en  46.12.590.catala_en  46.12.600.catala_en  46.12.610.catala_en  46.12.640.catala_en  46.12.650.catala_en  46.12.720.catala_en  46.12.750.catala_en  46.16A.050.catala_en  46.55.230.catala_en  46.61.020.catala_en  46.61.500.catala_en  46.61.502.catala_en  46.61.503.catala_en  46.61.520.catala_en  (+28 more)
catala-regs/ocaml/: .gitattributes  .gitignore  Makefile  Wrapper.ml  config.ml  dune  main.ml  package.json
catala-regs/ocaml/_build/default/: wrapper.bc.js
data/: README.md  hawaii-regulations.json
front-end/: README.md  deploy.sh  package.json  vue.config.js
scraping/: other_scraping_stuff.py  testScraper.py
test-regs/: 46.08.170.catala_en  46.09.457.catala_en  46.09.495.catala_en  46.12.755.catala_en  46.16A.030.catala_en  46.16A.070.catala_en  46.16A.320.catala_en  46.16A.520.catala_en  46.18.235.catala_en  (+59 more)
(+9 files in other folders)
